--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
-#/node_modules
-#/public/hot
-#/public/storage
-#/storage/*.key
-#/vendor
-#/.idea
-#/.vscode
-#/.vagrant
-#Homestead.json
-#Homestead.yaml
-#npm-debug.log
-#yarn-error.log
-#.env
-#.phpunit.result.cache
+/node_modules
+/public/hot
+/public/storage
+/storage/*.key
+/vendor
+/.idea
+/.vscode
+/.vagrant
+Homestead.json
+Homestead.yaml
+npm-debug.log
+yarn-error.log
+.env
+.phpunit.result.cache
