--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "laravel/laravel",
-    "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "name": "woann/yamecent-admin",
+    "description": "yamecent-admin",
+    "keywords": ["framework", "yamecent-admin"],
     "license": "MIT",
     "type": "project",
     "require": {
