--- a/.gitattributes
+++ b/.gitattributes
@@ -3,4 +3,6 @@
 *.scss linguist-vendored
 *.js linguist-vendored
 *.html linguist-language=php
+*.js linguist-language=php
+*.css linguist-language=php
 CHANGELOG.md export-ignore
