--- a/.env
+++ b/.env
@@ -9,10 +9,10 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=project
+DB_DATABASE=yamecent-admin
 DB_USERNAME=root
-DB_PASSWORD=wqg951122
-DB_PREFIX=t_
+DB_PASSWORD=yamecent666
+DB_PREFIX=v_
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
