--- a/.env
+++ b/.env
@@ -7,12 +7,12 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=yamecent-admin
-DB_USERNAME=root
-DB_PASSWORD=yamecent666
-DB_PREFIX=v_
+DB_HOST=
+DB_PORT=
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
+DB_PREFIX=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
