--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:f8dzOXSo7x/8Zk3fv37TYVPFANKg0GuLL9tyeY2jJPU=
 APP_DEBUG=true
 APP_URL=http://localhost
 
